# check-rate-automation

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py  orchestrator.py
app/compare/: engine.py
app/events/: bus.py
app/mfa/: bridge.py
app/moso/: client.py  curl_parser.py  facade.py  headers.py  parser.py  payload.py
app/portals/: __init__.py  base.py
app/portals/ad_mortgage/: __init__.py  adapter.py
app/portals/sunwest/: __init__.py  adapter.py
app/routes/: compare.py  events.py  mfa.py  moso_session.py
app/secrets/: store.py
docs/: ad-mortgage-recon.md  adding-a-lender.md  moso-endpoint-recon.md
docs/superpowers/plans/: 2026-05-13-check-rate-v1.md
docs/superpowers/specs/: 2026-05-13-check-rate-design.md
scripts/: capture_portal_snapshot.py  debug_ad_mortgage.py  debug_ad_mortgage_adjustments.py  manage_secrets.py
static/: style.css
templates/: index.html
tests/: test_config.py  test_main.py  test_models.py  test_orchestrator.py
tests/compare/: test_engine.py
tests/events/: test_bus.py
tests/mfa/: test_bridge.py
tests/moso/: test_client.py  test_curl_parser.py  test_facade.py  test_headers.py  test_parser.py  test_payload.py
tests/moso/fixtures/: getratesop_sample.json
tests/portals/: test_registry.py
tests/portals/ad_mortgage/: test_adapter.py  test_live.py
tests/routes/: test_compare.py  test_events.py  test_mfa.py  test_moso_session.py
tests/scripts/: test_manage_secrets.py
tests/secrets/: test_store.py
(+1 files in other folders)
