[project]
name = "check-rate"
version = "0.1.0"
description = "MOSO vs lender-portal pricing comparison tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "playwright>=1.48",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "structlog>=24.4",
    "cryptography>=43.0",
    "click>=8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.5",
    "ruff>=0.7",
    "pyright>=1.1.385",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["app", "tests", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: tests that hit live external systems (skipped by default)",
]
addopts = "-m 'not live'"
testpaths = ["tests"]
